add: add all element that needed in this login area except image

--- a/main.html
+++ b/main.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <section>
+        <div>
+            <h1>Welcome Back</h1>
+            <p>
+                Today is a new day it's your day. You shape it.
+                <br>
+                Sign in to start managing your projects.
+            </p>
+        </div>
+        <div>
+            <label>Email</label>
+            <br>
+            <input type="email" value="" placeholder="Example@gmail.com" />
+        </div>
+        <div>
+            <label>Password</label>
+            <br>
+            <input type="password" value="" placeholder="At least 8 characters" />
+        </div>
+        <div>
+            <a href="">Forget Password</a>
+        </div>
+        <button>Sign In</button>
+        <div>
+            <p>Don't you have an account ? <a href="">Sign up</a> </p>
+        </div>
+        <footer>
+            <p>&copy; 2023 All Right Reserved</p> <!-- the font color need change and make all uppercase-->
+        </footer>
+    </section>
+    <section></section>
 </body>
+
 </html>
