--- a/main.html
+++ b/main.html
@@ -6,57 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
-<style>
-    @font-face {
-        font-family: myFirstFont;
-        font-family: 'Roboto';
-        src: local('Roboto'), url('https://roboto-webfont.googlecode.com/files/Roboto-Regular-webfont.woff') format('woff');
-        font-weight: 400;
-        font-style: normal;
-    }
 
-    * {
-        font-family: myFirstFont;
-    }
-</style>
-
-<body class="container">
-    <section class="section sectionText">
-        <div>
-            <h1>Welcome Back 👋</h1>
-            <p>
-                Today is a new day it's your day. You shape it.
+<body>
+    <div class="container">
+        <section class="section sectionText">
+            <div>
+                <h1>Welcome Back 👋</h1>
+                <p>
+                    Today is a new day it's your day. You shape it.
+                    <br>
+                    Sign in to start managing your projects.
+                </p>
+            </div>
+            <div>
+                <label>Email</label>
                 <br>
-                Sign in to start managing your projects.
-            </p>
-        </div>
-        <div>
-            <label>Email</label>
-            <br>
-            <input type="email" value="" placeholder="Example@gmail.com" />
-        </div>
-        <div>
-            <label>Password</label>
-            <br>
-            <input type="password" value="" placeholder="At least 8 characters" />
-        </div>
-        <div>
-            <a href="">Forget Password</a>
-        </div>
-        <button>Sign In</button>
-        <div>
-            <p>Don't you have an account ? <a href="">Sign up</a> </p>
-        </div>
-        <footer>
-            <p>&copy; 2023 All Right Reserved</p> <!-- the font color need change and make all uppercase-->
-        </footer>
-    </section>
-    <section class="section">
-        <div>
-            <img src="Login_Art.png" alt="image-vas-flower" class="image">
-        </div>
-    </section>
+                <input type="email" value="" placeholder="Example@gmail.com" />
+            </div>
+            <div>
+                <label>Password</label>
+                <br>
+                <input type="password" value="" placeholder="At least 8 characters" />
+            </div>
+            <div>
+                <a href="">Forget Password</a>
+            </div>
+            <button>Sign In</button>
+            <div>
+                <p>Don't you have an account ? <a href="">Sign up</a> </p>
+            </div>
+            <footer>
+                <p>&copy; 2023 All Right Reserved</p> <!-- the font color need change and make all uppercase-->
+            </footer>
+        </section>
+        <section class="section">
+            <div>
+                <img src="Login_Art.png" alt="image-vas-flower" class="image desktop">
+                <img src="Login_Art_Mobile.png" alt="image-vas-flower" class="image mobile">
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
