--- a/main.html
+++ b/main.html
@@ -27,14 +27,14 @@
             <div>
                 <label>Email</label>
                 <br>
-                <input type="email" value="" placeholder="Example@gmail.com" />
+                <input class="input"  type="email" value="" placeholder="Example@gmail.com" />
             </div>
             <div>
                 <label>Password</label>
                 <br>
-                <input type="password" value="" placeholder="At least 8 characters" />
+                <input class="input" type="password" value="" placeholder="At least 8 characters" />
             </div>
-            <div>
+            <div class="forgetpass">
                 <a href="">Forget Password</a>
             </div>
             <button>Sign In</button>
@@ -47,8 +47,8 @@
         </section>
         <section class="section">
             <div>
-                <img src="Login_Art.png" alt="image-vas-flower" class="image desktop">
-                <img src="Login_Art_Mobile.png" alt="image-vas-flower" class="image mobile">
+                <img src="Login_Art.png" alt="image-vas-flower" class="image mobile">
+                <img src="Login_Art_Mobile.png" alt="image-vas-flower" class="image desktop">
             </div>
         </section>
     </div>
