--- a/main.html
+++ b/main.html
@@ -15,35 +15,36 @@
 
 <body>
     <div class="container">
-        <section class="section sectionText">
-            <div>
+        <section class="section">
+            <div class="sectionInput">
                 <h1>Welcome Back 👋</h1>
                 <p>
                     Today is a new day it's your day. You shape it.
                     <br>
                     Sign in to start managing your projects.
                 </p>
-            </div>
-            <div>
-                <label>Email</label>
+                <div>
+                    <label>Email</label>
+                    <br>
+                    <input class="input"  type="email" value="" placeholder="Example@gmail.com" />
+                </div>
+                <div class="pass">
+                    <label>Password</label>
+                    <br>
+                    <input class="input" type="password" value="" placeholder="At least 8 characters" />
+                </div>
+                <div class="forgetpass" >
+                    <a href="" class="forgetpassText">Forgot Password ?</a>
+                </div>
                 <br>
-                <input class="input"  type="email" value="" placeholder="Example@gmail.com" />
+                <button class="button">Sign In</button>
+                <div class="textSignUp">
+                    <p>Don't you have an account ? <a href="">Sign up</a> </p>
+                </div>
+                <footer>
+                    <p>&copy; 2023 All Right Reserved</p> <!-- the font color need change and make all uppercase-->
+                </footer>
             </div>
-            <div>
-                <label>Password</label>
-                <br>
-                <input class="input" type="password" value="" placeholder="At least 8 characters" />
-            </div>
-            <div class="forgetpass">
-                <a href="">Forget Password</a>
-            </div>
-            <button>Sign In</button>
-            <div>
-                <p>Don't you have an account ? <a href="">Sign up</a> </p>
-            </div>
-            <footer>
-                <p>&copy; 2023 All Right Reserved</p> <!-- the font color need change and make all uppercase-->
-            </footer>
         </section>
         <section class="section">
             <div>
